--- a/sys-src/era.foss.tracer/plugin.xml
+++ b/sys-src/era.foss.tracer/plugin.xml
@@ -10,7 +10,7 @@
 
 <plugin>
 
-
+	<!--
 	<extension point="org.eclipse.ui.menus">
 		<menuContribution locationURI="menu:org.eclipse.ui.main.menu">
 			<menu id="era.foss.tracer.menu" label="ERA Tracer">
@@ -35,12 +35,12 @@
 			</command>
 		</menuContribution>
 	</extension>
-
+	-->
 
 
 	<extension id="eratracerbuilder" name="Era Tracer Builder"
 		point="org.eclipse.core.resources.builders">
-		<builder>
+		<builder> <!-- hasNature="true" -->
 			<run class="era.foss.tracer.EraTracerIncrementalProjectBuilder">
 				<parameter name="optimize" value="true" />
 				<parameter name="comment" value="Era Tracer Incremental Builder" />
@@ -108,5 +108,36 @@
 			</action>
 		</objectContribution>
 	</extension>
+
+   <extension point="org.eclipse.core.resources.markers" id="era.foss.tracer.reqmarker" name="Requirement Marker"> 
+      <super type="org.eclipse.core.resources.textmarker"/> 
+      <persistent value="true"/> 
+      <attribute name="reqid"/>
+   </extension> 
+   
+  <extension point="org.eclipse.ui.editors.annotationTypes">
+     <type
+        super="org.eclipse.ui.workbench.texteditor.warning"
+        markerType="era.foss.tracer.reqmarker"
+        name="era.foss.tracer.reqannotation"
+        markerSeverity="0"/>
+  </extension>
+
+  <extension point="org.eclipse.ui.editors.markerAnnotationSpecification">
+     <specification
+        annotationType="era.foss.tracer.reqannotation"
+        label="ERF Requirement"
+        icon="icons/reqmarker.png"
+			overviewRulerPreferenceKey="clruler"
+			overviewRulerPreferenceValue="true"
+			colorPreferenceKey="clcolor"
+			colorPreferenceValue="255,255,0"
+			textPreferenceKey="cltext"
+			textPreferenceValue="true"
+			verticalRulerPreferenceKey="clvertical"
+			verticalRulerPreferenceValue="true"
+			textStylePreferenceKey="clstyle"
+			textStylePreferenceValue="BOX"/>
+  </extension>
 
 </plugin>
