* Restructure creation of control for displaying AttributeDefinitions * Support boolean and enum types in SpecObjectViewer

--- a/sys-src/era.foss.objecteditor/.project
+++ b/sys-src/era.foss.objecteditor/.project
@@ -3,6 +3,7 @@
 	<name>era.foss.objecteditor</name>
 	<comment></comment>
 	<projects>
+		<project>org.eclipse.nebula.widgets.tablecombo</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
